--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+  body {
+  background-image: url("wonrywotitj71.png");
+  background-color: #cccccc;
+
 <h1>trolled</h1>
   <p>Next time, don't just dox little kids!</p>
 </html>
+}
