--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   body {
   background-image: url("wonrywotitj71.png");
   background-color: #cccccc;
-
+  <font color="blue">  
 <h1>trolled</h1>
   <p>Next time, don't just dox little kids!</p>
 </html>
