--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
-  
-  <font color="blue">  
-<h1>trolled</h1>
+<head>
+  <meta charset="utf-8">
+  <title>moles.llc</title>
+  <style>*{background: #000;color: #fff;margin: 0;overflow: hidden;text-align: center;font-family: monospace;font-size: 32px;}</style>
+</head>
+<body>
+  <h1>trolled</h1>
   <p>Next time, don't just dox little kids!</p>
+</body>
 </html>
