look its better!

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>moles.llc</title>
-  <style>*{background: #000;color: #fff;margin: 0;overflow: hidden;text-align: center;font-family: monospace;font-size: 32px;}</style>
+  <style>*{background: #000;color: #fff;overflow: hidden;text-align: center;font-family: monospace;font-size: 32px;}</style>
 </head>
 <body>
   <h1>trolled</h1>
