added fix :trol:

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
   <h1>trolled</h1>
   <p>Next time, don't just dox little kids!</p>
+  <p>Complaints? Please contact us on Discord:flashpointmotherfukers#7308</p>
 </body>
 </html>
