--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>moles.llc</title>
-  <style>*{background: #000;color: #fff;overflow: hidden;text-align: center;font-family: monospace;font-size: 32px;}</style>
+  <style>*{background: #000;color: #fff;overflow: hidden;text-align: center;font-family: monospace;font-size: 24px;width:100%;} footer {position:absolute;bottom:0;} img{max-width:400px;max-height:400px;}</style>
 </head>
 <body>
   <h1>trolled</h1>
   <p>Next time, don't just dox little kids!</p>
-  <p>Complaints? Please contact us on Discord:flashpointmotherfukers#7308</p>
+  <h2>Mald:</h2>
+  <img src="images/mald/mommies_credit_card.png">
+  <footer><p>Complaints?<br>Direct yourself to Free Michael#6788</p></footer>
+  <!-- cutest.design sites -->
 </body>
 </html>
