--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <p>Next time, don't just dox little kids!</p>
   <h2>Mald:</h2>
   <img src="images/mald/mommies_credit_card.png">
+  <img src="images/mald/racist.png">
   <footer><p>Complaints?<br>Direct yourself to Free Michael#6788</p></footer>
-  <!-- cutest.design sites -->
+  <!-- 最可爱的设计 sites -->
 </body>
 </html>
