--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>moles.llc</title>
+  <meta content="moles.llc" property="og:title" />
+  <meta content="trolled" property="og:description" />
+  <meta content="#E62169" data-react-helmet="true" name="theme-color" />
   <style>*{background: #000;color: #fff;overflow: hidden;text-align: center;font-family: monospace;font-size: 24px;width:100%;} footer {position:absolute;bottom:0;} img{max-width:400px;max-height:400px;}</style>
 </head>
 <body>
