fixed trolley bible.

--- a/404.html
+++ b/404.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <h1>404 not found</h1>
-  <p>copyright cutiest.design 2020-2022
+  <p>copyright cutiest.design 2020-2022</p>
 </body>
 </html>
