--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <h2>Mald:</h2>
   <img src="images/mald/mommies_credit_card.png">
   <img src="images/mald/racist.png">
+  
+  <h1>We gon come back, watch your asses :trol:</h1>
   <footer><p>Complaints?<br>Direct yourself to Free Michael#6788</p></footer>
   <!-- 最可爱的设计 sites -->
 </body>
