fix spelling (genius)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <img src="images/mald/racist.png">
   
   <h1>We gon come back, watch your asses :trol:</h1>
-  <p>Copyright cutiest.design 2020-2022</p>
+  <p>Copyright cutest.design 2020-2022</p>
   <footer><p>Complaints?<br>Direct yourself to Free Michael#6788</p></footer>
   <!-- 最可爱的设计 sites -->
 </body>
